# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django.yml  hexlet-check.yml
locale/ru/LC_MESSAGES/: django.po
overview/: urls.py  views.py
simpletodo/: .gitlab-ci.yml  README.md  docker-compose.yml  manage.py  pyproject.toml  settings.py  urls.py  views.py  wsgi.py
simpletodo/config/: .env.template
simpletodo/docker/: docker-compose.prod.yml
simpletodo/server/templates/txt/: humans.txt
simpletodo/settings/: common.py  development.py  devepment.py  production.py
simpletodo/simpletodo/: asgi.py  settings.py  urls.py  wsgi.py
simpletodo/simpletodo/templates/: sidebar.html
simpletodo/templates/: base.html  footer.html  header.html  index.html
tasks/: urls.py
templates/: base.html  menu.html
todo/: urls.py
todo/templates/: base.html  footer.html  header.html  index.html  menu.html
