[tool.poetry]
name = "simpletodo"
version = "0.1.0"
description = "Simple ToDo web-application"
authors = ["Artem Stepanenko <artem@stepanenko.one>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
